# technical_achitecture_reviewer

./: .env.example  README.md  jobs.db  pyproject.toml  requirements.txt
outputs/: report_68d08f9c-72d4-4eb1-be4f-909bb3cd7d7b.docx  report_afa9935a-4e4e-4c85-810a-f358c80ebdfc_part1.docx  report_part1_68d08f9c.docx.docx
src/technical_reviewer/: crew.py  database.py  main.py
src/technical_reviewer/config/: agents.yaml  tasks.yaml
src/technical_reviewer/tools/: document_parser.py  report_generator.py
