[project]
name = "technical_reviewer"
version = "0.1.0"
description = "technical_reviewer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pdfplumber",
    "pytesseract",
    "Pillow",
    "python-docx",
    "markdown",
    "fpdf2",
    "pdf2image"
]

[project.scripts]
technical_reviewer = "technical_reviewer.main:run"
run_crew = "technical_reviewer.main:run"
train = "technical_reviewer.main:train"
replay = "technical_reviewer.main:replay"
test = "technical_reviewer.main:test"
run_with_trigger = "technical_reviewer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
